--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "backend": "nodemon index.js",
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\"",
+    "backend": "nodemon server/index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,12 +20,16 @@
   },
   "homepage": "https://github.com/dalping/react-node-js#readme",
   "dependencies": {
+    "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "concurrently": "^6.2.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.4"
+    "mongoose": "^6.0.4",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
