--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.6.4",
     "nodemon": "^2.0.12"
   }
 }
